--- a/files/main_style.css
+++ b/files/main_style.css
@@ -5,12 +5,14 @@
  body { font-family: 'Open Sans', Helvetica, sans-serif; background:#242424; }
  .container { margin: 0 auto; width: 960px; }
  #header-wrap, #banner-wrap, #nav-wrap, #main-wrap, #footer-wrap, #total-wrapper { width:100%; min-width:960px; background:#fff; }
- div.paragraph a, h2 a, .blog-comments-bottom a { color: #6293ad; border-bottom:1px solid #c0d1db; }
+ div.paragraph a, h2 a, h3 a, .blog-comments-bottom a { color: #6293ad; border-bottom:1px solid #c0d1db; }
  p a, h2 a, .blog-comments-bottom a { color: #6293ad; border-bottom:1px solid #c0d1db; }
- div.paragraph a:hover, h2 a:hover, .blog-comments-bottom a:hover { color: #3a7493; border-bottom:1px solid #8fb2c5; }
- p a:hover, h2 a:hover, .blog-comments-bottom a:hover { color: #3a7493; border-bottom:1px solid #8fb2c5; }
+ div.paragraph a:hover, h2 a:hover, h3 a:hover, .blog-comments-bottom a:hover { color: #3a7493; border-bottom:1px solid #8fb2c5; }
+ p a:hover, h2 a:hover, h3 a:hover, .blog-comments-bottom a:hover { color: #3a7493; border-bottom:1px solid #8fb2c5; }
  h2 { font-size:17px ; padding: .5em 0 0.8em 0; letter-spacing:1px; line-height: 1.2; font-weight:400; color: #373737; }
  h2 a { color: #373737; }
+ h3 { font-size:15px ; padding: .5em 0 0.8em 0; letter-spacing:1px; line-height: 1.2; font-weight:400; color: #373737; }
+ h3 a { color: #373737; }
  div.paragraph { font-size: 13px; line-height: 180%; color:#464646; padding: .5em 0; }
  p { font-size: 13px; line-height: 180%; color:#464646; padding: .5em 0; }
  blockquote { font-style:italic; border-left:4px solid #92b4c6; margin:10px 0 10px 0; padding-left:20px; line-height:1.8; font-size:13px; color:#888; }
@@ -91,7 +93,7 @@
  .no-header-page .wsite-header { display:none; }
  .landing-page #banner { padding: 0; }
  #bannerleft { float: right; width: 400px; }
- .landing-page .wsite-header { width: 400px; height: 300px; background: url(theme/banner-landing.jpg?1509568249) no-repeat; }
+ .landing-page .wsite-header { width: 400px; height: 450px; background: url(theme/banner-landing.jpg?1509568249) no-repeat; }
  #bannerright { float:left ; width: 500px; height:300px; }
  #bannerright h2 { font-size:25px; font-weight:300; padding: 0px; line-height: 25px; }
  #bannerright div.paragraph { padding: 20px 0px; line-height: 140%; }
